--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
 /** @format */
+@font-face {
+	font-family: ksDog;
+	src: local(ksDog), url('../public/fonts/ksDog.ttf') format('truetype');
+}
 
 @font-face {
 	font-family: ksDog;
