--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,8 @@
 	src: local(ksDog), url('./fonts/ksDog.ttf') format('truetype');
 }
 
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
+
 /* Small OLD devices like iphone SE (landscape phones, 375px and up ) */
 @media (min-width: 300px) {
 	.App-logo {
@@ -33,6 +35,13 @@
 		margin-top: 7rem;
 	}
 
-	
+	.bi::before {
+		display: inline-block;
+		content: '';
+		vertical-align: -0.125em;
+		background-image: url("data:image/svg+xml,<svg viewBox='0 0 16 16' fill='%23333' xmlns='http://www.w3.org/2000/svg'><path fill-rule='evenodd' d='M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z' clip-rule='evenodd'/></svg>");
+		background-repeat: no-repeat;
+		background-size: 1rem 1rem;
+	}
 }
 
