--- a/src/index.css
+++ b/src/index.css
@@ -31,17 +31,26 @@
 		font-family: 'ksDog';
 	}
 
-	.mb-footer {
+	/* .mb-footer {
 		margin-top: 7rem;
-	}
+	} */
 
-	.bi::before {
+	/* .bi::before {
 		display: inline-block;
 		content: '';
 		vertical-align: -0.125em;
 		background-image: url("data:image/svg+xml,<svg viewBox='0 0 16 16' fill='%23333' xmlns='http://www.w3.org/2000/svg'><path fill-rule='evenodd' d='M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z' clip-rule='evenodd'/></svg>");
 		background-repeat: no-repeat;
 		background-size: 1rem 1rem;
-	}
+	} */
 }
 
+@media (min-width: 400px){
+
+body{
+height: 800px;
+}
+
+
+
+}
