--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 /** @format */
+@import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css');
+
 @font-face {
 	font-family: ksDog;
 	src: local(ksDog), url('../public/fonts/ksDog.ttf') format('truetype');
@@ -8,8 +10,6 @@
 	font-family: ksDog;
 	src: local(ksDog), url('./fonts/ksDog.ttf') format('truetype');
 }
-
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
 
 /* Small OLD devices like iphone SE (landscape phones, 375px and up ) */
 @media (min-width: 300px) {
@@ -45,12 +45,58 @@
 	} */
 }
 
-@media (min-width: 400px){
+@media (min-width: 576px) {
+	body {
+		height: 1000px;
+		padding: 50px;
+	}
 
-body{
-height: 800px;
+	.sizesForHomeTitle {
+		font-size: 200px;
+		letter-spacing: 40px;
+		line-height: 190px;
+	}
+	.sizesForPagesTitle {
+		font-size: 150px;
+		letter-spacing: 10px;
+	}
+}
+/* Small OLD devices like iphone SE (landscape phones, 375px and up ) */
+@media (min-width: 992px) {
+	body {
+		height: 1500px;
+		padding: 90px;
+		font-size: 30px;
+	}
+
+	.sizesForHomeTitle {
+		font-size: 350px;
+		letter-spacing: 40px;
+		line-height: 190px;
+	}
+	.sizesForPagesTitle {
+		font-size: 200px;
+		letter-spacing: 10px;
+	}
 }
 
+@media (min-width: 1400px) {
+	body {
+		height: 1000px;
+		padding: 100px;
+		font-size: 30px;
+	}
 
-
+	.sizesForHomeTitle {
+		font-size: 350px;
+		letter-spacing: 40px;
+		line-height: 200px;
+		padding-bottom: 50px;
+	}
+	.sizesForPagesTitle {
+		font-size: 200px;
+		letter-spacing: 10px;
+		padding-bottom: 50px;
+	}
 }
+
